// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UI kit Element render correctly with className 1`] = `
<div
  className="base"
/>
`;

exports[`UI kit Element render correctly with no child 1`] = `<div />`;

exports[`UI kit Element render element as specified tag name 1`] = `
<span
  className="base"
/>
`;

exports[`UI kit Element render with data and aria 1`] = `
<div
  aria-hidden={true}
  className="base"
  data-test="next"
/>
`;

exports[`UI kit Element render without classes 1`] = `
<div
  className="base"
/>
`;
